--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -6,9 +6,8 @@ framework:
         transports:
             async:
                 dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                options:
+                    delete_after_ack: false
+                    delete_after_reject: false
         routing:
             'Symfony\Component\Mailer\Messenger\SendEmailMessage': async
-
-
-
-  
