--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -3,7 +3,7 @@ framework:
 
     router:
         utf8: true
-        default_uri: '%env(APP_URL)%'  # ➔ AJOUT obligatoire pour les liens d'email corrects
+        default_uri: '%env(APP_URL)%'
 
     session:
         handler_id: 'session.handler.native_file'
