ajouter nouveau fonctionnalités

--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,11 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/annotations": "^2.0.2",
-        "doctrine/dbal": "^3.9.4",
+        "doctrine/dbal": "^4.2",
         "doctrine/doctrine-bundle": "^2.14",
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": ">=3.3.2",
-        "google/apiclient": "2.15",
+        "google/apiclient": "^2.18",
         "monolog/monolog": "3.0",
         "phpdocumentor/reflection-docblock": "^5.6.2",
         "phpstan/phpdoc-parser": "^2.1",
