--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,8 @@
         "doctrine/doctrine-migrations-bundle": "^3.4",
         "doctrine/orm": ">=3.3.2",
         "google/apiclient": "^2.18",
+        "knpuniversity/oauth2-client-bundle": "*",
+        "league/oauth2-google": "*",
         "monolog/monolog": "3.0",
         "phpdocumentor/reflection-docblock": "^5.6.2",
         "phpstan/phpdoc-parser": "^2.1",
