--- a/config/services.yaml
+++ b/config/services.yaml
@@ -49,3 +49,8 @@ services:
             $security: '@security.helper'
             $em: '@doctrine.orm.entity_manager'
             $requestStack: '@request_stack'
+  App\Service\GoogleDriveService:
+        arguments:
+            $clientId: '%env(GOOGLE_CLIENT_ID)%'
+            $clientSecret: '%env(GOOGLE_CLIENT_SECRET)%'
+            $redirectUri: '%env(GOOGLE_REDIRECT_URI)%'
